--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <!---->
     <meta charset="UTF-8" />
     <meta
@@ -60,7 +61,7 @@
       </div>
     </header>
     <main>
-      <section class="section-one">
+      <section class="section-one section">
         <div class="container">
           <h1 class="zagolovok-one">
             Effective Solutions for Your Business
@@ -70,7 +71,7 @@
           </button>
         </div>
       </section>
-      <section class="section-two">
+      <section class="section-two section">
         <div class="container">
           <h2 class="visually-hidden">Kontent</h2>
           <ul class="spisoktwo">
@@ -154,7 +155,7 @@
       </section>
       <section class="section-three">
         <div class="container">
-          <h2 class="zagolovokh-two">Our Team</h2>
+          <h2 class="zagolovokh-two section">Our Team</h2>
           <ul class="spisok-three">
             <li class="teamcards">
               <img
@@ -372,7 +373,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-four">
+      <section class="section-four section">
         <div class="container">
           <h2 class="zagolovokh-two">Our Portfolio</h2>
           <ul class="spisok-four">
@@ -535,8 +536,8 @@
         </div>
         <div class="container-link-paragraph-footer">
           <a href="./index.html" class="logo-footer"
-            >Web<span class="studio-foot">Studio</span></a
-          >
+            >Web<span class="studio-foot">Studio</span>
+            </a>
           <p class="paragraph-foot">
             Increase the flow of customers and sales for your
             business with digital marketing & growth solutions.
