--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"> </use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close">close</button>
+        <nav class="mobile-menu-nav">navigation</nav>
+      <address>Adress</address>
+      <div>soc link</div>
+      </div>
       </div>
     </header>
     <main>
@@ -153,12 +166,13 @@
           </ul>
         </div>
       </section>
-      <section class="section-three">
+      <section class="section-three section">
         <div class="container">
           <h2 class="zagolovokh-two section">Our Team</h2>
           <ul class="spisok-three">
             <li class="teamcards">
               <img
+              srcset="./images/TeamCard1.jpg x1, ./images/team-x2.jpg x2"
                 src="./images/TeamCard1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -213,6 +227,7 @@
 
             <li class="teamcards">
               <img
+              srcset="./images/TeamCard2.jpg x1, ./images/team2-x2 x2"
                 src="./images/TeamCard2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -266,6 +281,7 @@
             </li>
             <li class="teamcards">
               <img
+              srcset="./images/TeamCard3.jpg x1, ./images/team3-x2 x2"
                 src="./images/TeamCard3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -319,6 +335,7 @@
             </li>
             <li class="teamcards">
               <img
+              srcset="./images/TeamCard4.jpg x1, ./images/team4-x2 x2"
                 src="./images/TeamCard4.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -509,31 +526,6 @@
     </main>
     <footer class="foot">
       <div class="container footer-container">
-        <div class="modal-overlay">
-          <p class="paragraph-overlay">Subscribe</p>
-          <form class="form-overlay">
-            <label class="label-form-overlay">
-              <input
-                type="email"
-                placeholder="E-mail"
-                class="input-form"
-              />
-            </label>
-            <button class="button-form">
-              Subscribe
-              <svg
-                id="icon-telegram"
-                class="svg-icon"
-                width="24"
-                height="24"
-              >
-                <use
-                  href="./images/icons.svg#icon-telegram"
-                ></use>
-              </svg>
-            </button>
-          </form>
-        </div>
         <div class="container-link-paragraph-footer">
           <a href="./index.html" class="logo-footer"
             >Web<span class="studio-foot">Studio</span>
@@ -587,6 +579,20 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="modal-overlay">
+          <div class="paragraph-label">
+          <p class="paragraph-overlay">Subscribe</p>
+            <label class="label-form-overlay">
+              <input type="email" placeholder="E-mail" class="input-form" />
+            </label>
+        </div>
+            <button class="button-form">
+              Subscribe
+              <svg id="icon-telegram" class="svg-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
         </div>
       </div>
     </footer>
