--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
@@ -11,7 +11,6 @@
 <link rel="stylesheet" href="./css/style.css" />
 <title>Web Studio</title>
 </head>
-
 <body>
   <header class="head">
     <div class="container navi">
@@ -43,10 +42,56 @@
     </div>
     <div class="mobile-menu">
       <div class="container mobile-menu-container">
-        <button class="mobile-menu-close">close</button>
-        <nav class="mobile-menu-nav">navigation</nav>
-        <address>Adress</address>
-        <div>soc link</div>
+        <button class="mobile-menu-close"><svg class="icon-close one" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg></button>
+        <nav class="mobile-menu-nav">
+          <h1 class="zagolovok-one-mobile">Studio</h1>
+          <h1 class="zagolovok-one-mobile">Portfolio</h1>
+          <h1 class="zagolovok-one-mobile">Contacts</h1>
+        </nav>
+        <address>
+          <ul class="adres-spisok-mobile">
+            <li class="count-spisok">
+              <a href="mailto:info@devstudio.com" class="silka-adress-mobile">info@devstudio.com</a>
+            </li>
+            <li class="count-spisok">
+              <a href="tel:+110001111111" class="silka-adress-mobile">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+        <div class="links">
+          <ul class="social-icons-list-mobile">
+          <li class="social-icons">
+            <a href="/index.html" class="social-link-mobile">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons">
+            <a href="/index.html" class="social-link">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons">
+            <a href="/index.html" class="social-link">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons">
+            <a href="/index.html" class="social-link">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
       </div>
     </div>
   </header>
