--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <ul class="spisok-four">
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img6.jpg x1, ./images/portfolio1-x2.jpg" src="./images/img6.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img6.jpg x1, ./images/portfolio1-x2.jpg x2" src="./images/img6.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -359,7 +359,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img5.jpg x1, ./images/portfolio2-x2.jpg" src="./images/img5.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img5.jpg x1, ./images/portfolio2-x2.jpg x2" src="./images/img5.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -376,7 +376,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img4.jpg x1, ./images/portfolio3-x2.jpg" src="./images/img4.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img4.jpg x1, ./images/portfolio3-x2.jpg x2" src="./images/img4.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -393,7 +393,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img3.jpg x1, ./images/portfolio4-x2.jpg" src="./images/img3.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img3.jpg x1, ./images/portfolio4-x2.jpg x2" src="./images/img3.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -410,7 +410,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img2.jpg x1, ./images/portfolio5-x2.jpg" src="./images/img2.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img2.jpg x1, ./images/portfolio5-x2.jpg x2" src="./images/img2.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -427,7 +427,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img x1, ./images/portfolio6-x2.jpg" src="./images/img.jpg" alt="Banking app" width="288" />
+              <img srcset="./images/img x1, ./images/portfolio6-x2.jpg x2" src="./images/img.jpg" alt="Banking app" width="288" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
