--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <h2 class="zagolovokh-two">Our Team</h2>
         <ul class="spisok-three">
           <li class="teamcards">
-            <img srcset="./images/TeamCard1.jpg x1, ./images/TeamCard1-2x.jpg x2" src="./images/TeamCard1.jpg"
+            <img srcset="./images/TeamCard1.jpg 1x, ./images/TeamCard1-2x.jpg 2x" src="./images/TeamCard1.jpg"
               alt="Mark Guerrero" width="264" />
             <div class="forname">
               <h3 class="zagolovokh-three-section-three add-class">
@@ -214,7 +214,7 @@
           </li>
 
           <li class="teamcards">
-            <img srcset="./images/TeamCard2.jpg x1, ./images/TeamCard2-2x x2" src="./images/TeamCard2.jpg" alt="Tom Ford"
+            <img srcset="./images/TeamCard2.jpg 1x, ./images/TeamCard2-2x 2x" src="./images/TeamCard2.jpg" alt="Tom Ford"
               width="264" />
             <div class="forname">
               <h3 class="zagolovokh-three-section-three add-class">
@@ -254,7 +254,7 @@
             </div>
           </li>
           <li class="teamcards">
-            <img srcset="./images/TeamCard3.jpg x1, ./images/TeamCard3-2x x2" src="./images/TeamCard3.jpg"
+            <img srcset="./images/TeamCard3.jpg 1x, ./images/TeamCard3-2x 2x" src="./images/TeamCard3.jpg"
               alt="Camila Garcia" width="264" />
             <div class="forname">
               <h3 class="zagolovokh-three-section-three add-class">
@@ -294,7 +294,7 @@
             </div>
           </li>
           <li class="teamcards">
-            <img srcset="./images/TeamCard4.jpg x1, ./images/TeamCard4-2x x2" src="./images/TeamCard4.jpg"
+            <img srcset="./images/TeamCard4.jpg 1x, ./images/TeamCard4-2x 2x" src="./images/TeamCard4.jpg"
               alt="Daniel Wilson" width="264" />
             <div class="forname">
               <h3 class="zagolovokh-three-section-three add-class">
@@ -359,7 +359,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img5.jpg x1, ./images/portfolio2-x2.jpg x2" src="./images/img5.jpg" alt="Banking app" width="360" />
+              <img srcset="./images/img5.jpg 1x, ./images/portfolio2-x2.jpg 2x" src="./images/img5.jpg" alt="Banking app" width="360" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -376,7 +376,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img4.jpg x1, ./images/portfolio3-x2.jpg x2" src="./images/img4.jpg" alt="Banking app" width="360" />
+              <img srcset="./images/img4.jpg 1x, ./images/portfolio3-x2.jpg 2x" src="./images/img4.jpg" alt="Banking app" width="360" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -393,7 +393,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img3.jpg x1, ./images/portfolio4-x2.jpg x2" src="./images/img3.jpg" alt="Banking app" width="360" />
+              <img srcset="./images/img3.jpg 1x, ./images/portfolio4-x2.jpg 2x" src="./images/img3.jpg" alt="Banking app" width="360" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -410,7 +410,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img2.jpg x1, ./images/portfolio5-x2.jpg x2" src="./images/img2.jpg" alt="Banking app" width="360" />
+              <img srcset="./images/img2.jpg 1x, ./images/portfolio5-x2.jpg 2x" src="./images/img2.jpg" alt="Banking app" width="360" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
@@ -427,7 +427,7 @@
           </li>
           <li class="spisok-kontent-fourth-section">
             <div class="container-image">
-              <img srcset="./images/img x1, ./images/portfolio6-x2.jpg x2" src="./images/img.jpg" alt="Banking app" width="360" />
+              <img srcset="./images/img 1x, ./images/portfolio6-x2.jpg 2x" src="./images/img.jpg" alt="Banking app" width="360" />
               <p class="paragraph-image">
                 14 Stylish and User-Friendly App Design
                 Concepts · Task Manager App · Calorie Tracker
